--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,25 +15,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="#">Agendamento</a>
-            <a class="nav-item nav-link active" href="#">Contato</a>
-            <a class="nav-item nav-link active" href="#">Login</a>
-            <a class="nav-item nav-link active  btn-cadastrar" href="#">Cadastrar</a>
+            <a class="nav-item nav-link active" href="/agendamento-pagina-inicial">Agendamento</a>
+            <a class="nav-item nav-link active" href="/contato">Contato</a>
+            <a class="nav-item nav-link active" href="/login">Login</a>
+            <a class="nav-item nav-link active  btn-cadastrar" href="/cadastro-paciente">Cadastrar</a>
           </div>
         </div>
       </nav>
 
       <div class="content-section">
         <div class="circle circle-left"></div>
-        <div class="circle circle-right"></div>
         <div class="text-content">
             <h1>Cuide da sua saúde com médicos online!</h1>
             <p>Evite filas, salas de espera e custos com deslocamento. <br>
             Aqui você tem acesso a saúde de qualidade por um preço justo.</p>
         </div>
+        <div class="circle circle-right"></div>
         <img src="/img/paciente-medico.png" alt="paciente-medico">
     </div>
       
+    <div class="especialidades">
+
+    </div>
 
 
     
