Co-authored-by: joelmagomez <joelmagomez@users.noreply.github.com> Co-authored-by: Alan Victor <alanvc11@users.noreply.github.com> Co-authored-by: Victoria Antonella <vickantonella@users.noreply.github.com>

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,17 +69,23 @@
     transform: translateY(-18%);
 }
 
-/* .circle-right {
-    width: 500px;
-    height: 500px;
-    top: 50%;
-    right: -100px;
-} */
-
 .content-section img {
     height: 400px;
     width: auto;
     position: absolute;
     right: 60px;
     top: 0;
+}
+
+.text-content-espec {
+    margin-top: 350px;
+    margin-left: 50px;
+}
+
+.text-content-espec p{
+    font-size: 18px;
+}
+
+.text-content-espec h1{
+    font-size: 40px;
 }
