--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,28 +18,30 @@
             <a class="nav-item nav-link active" href="/agendamento-pagina-inicial">Agendamento</a>
             <a class="nav-item nav-link active" href="/contato">Contato</a>
             <a class="nav-item nav-link active" href="/login">Login</a>
-            <a class="nav-item nav-link active  btn-cadastrar" href="/cadastro-paciente">Cadastrar</a>
+            <a class="nav-item nav-link active btn-cadastrar" href="/cadastro-paciente">Cadastrar</a>
           </div>
         </div>
-      </nav>
+    </nav>
 
-      <div class="content-section">
+    <div class="content-section">
         <div class="circle circle-left"></div>
         <div class="text-content">
             <h1>Cuide da sua saúde com médicos online!</h1>
             <p>Evite filas, salas de espera e custos com deslocamento. <br>
             Aqui você tem acesso a saúde de qualidade por um preço justo.</p>
         </div>
-        <div class="circle circle-right"></div>
         <img src="/img/paciente-medico.png" alt="paciente-medico">
     </div>
-      
-    <div class="especialidades">
-
-    </div>
-
-
     
+    <div class="especialidades">
+        <div class="text-content-espec">
+            <h2>Agende com médicos especialistas</h2>
+            <p>Selecione a especialidade, o profissional e a data/horário mais conveniente para realizar sua teleconsulta:</p>
+        </div>
+        <div class="button-espec ml-auto">
+            <button class="btn btn-primary">Todas especialidades</button>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
