--- a/views/cadastroMed.ejs
+++ b/views/cadastroMed.ejs
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinMED | Cadastrar médico</title>
+    <link rel="stylesheet" href="/css/cadastroMed.css">
 </head>
 <body>
-    <h1>Cadastro Médico</h1>
+    <div class="container">
+        <div class="form-container">
+            <h1>Cadastro Médico</h1>
+            <form action="/cadastrar" method="POST">
+                <input type="text" name="nome" placeholder="Digite seu nome completo" required>
+                <input type="email" name="email" placeholder="Digite seu email" required>
+                <input type="text" name="cpf" placeholder="CPF" required>
+                <input type="text" name="crm" placeholder="CRM" required>
+                <select name="tipo_usuario" required>
+                    <option value="medico">Médico</option>
+                    <option value="paciente">Paciente</option>                   
+                </select>
+                <input type="password" name="senha" placeholder="Digite sua senha" required>
+                <input type="password" name="confirmacao_senha" placeholder="Confirme sua senha" required>
+                <button type="submit">CADASTRAR</button>
+                <a class="login-link" href="/login">Já tem uma conta? Faça Login</a>
+            </form>
+        </div>
+        <div class="info-container">
+            <div>
+                <img src="/img/discussao.png" alt="Bem vindo">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
