--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinMED | Faça seu Login</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <h1>Página de Login</h1>
+    <div class="container">
+        <div class="flex">
+            <div class="lado1">
+                <h1>Bem Vindo de Volta!</h1>
+                <img src="/img/equipe-medica (1).png" alt="">
+            </div>
+
+            <div class="lado2">
+                <form action="">
+                    <label>Email:</label>
+                    <br>
+                    <input type="email">
+                    <br>
+                    <br>
+                    <label>Senha:</label>
+                    <br>
+                    <input type="password">
+                    <br>
+                    <br>
+                    <input type="checkbox">
+                    <label>Lembre-me</label>
+                    <br> <br> <br>
+
+                    <button>Login</button>
+                    <br> <br>
+                    <a href="">Não tem cadastro? Cadastre-se</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
