--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
             <p>Evite filas, salas de espera e custos com deslocamento. <br>
             Aqui você tem acesso a saúde de qualidade por um preço justo.</p>
         </div>
-        <img src="/img/paciente-medico.png" alt="paciente-medico">
+        <img src="/img/paciente-medico.png" alt="paciente-medico" class="image-content">
     </div>
     
     <div class="especialidades">
@@ -38,10 +38,110 @@
             <h2>Agende com médicos especialistas</h2>
             <p>Selecione a especialidade, o profissional e a data/horário mais conveniente para realizar sua teleconsulta:</p>
         </div>
-        <div class="button-espec ml-auto">
-            <button class="btn btn-primary">Todas especialidades</button>
+    </div>
+    
+    <div class="especialidade-container">
+        <div class="especialidade-card">
+            <div class="especialidade-img">
+                <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Clinica-Medica.svg" style="height: 50px;" alt="Card image cap">
+            </div>    
+            <label>Clinico Geral</label>
+        </div>
+        <div class="especialidade-card">
+            <div class="especialidade-img">
+            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Ginecologia.svg" style="height: 50px;" alt="Card image cap">
+            </div>
+            <label>Ginecologista</label>
+        </div>
+        <div class="especialidade-card">
+            <div class="especialidade-img">
+            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Pediatria.svg"  style="height: 50px;" alt="Card image cap">
+            </div>
+            <label>Pediatria</label>        
+            </div>
+        <div class="especialidade-card">
+            <div class="especialidade-img">
+            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Urologia.svg" style="height: 50px;" alt="Card image cap">
+            </div>
+            <label>Urologia</label>
         </div>
     </div>
+
+    <hr>
+
+    <div class="consult d-flex align-items-center">
+        <img src="https://medico24hs.com.br/wp-content/uploads/2020/04/Medico24hs_Home_ComoFunciona_Responsivo-768x504.jpg" alt="img-exempl">
+        <div class="consult-text flex-column justify-content-end ml-4">
+            <h2>Como funciona a consulta online?</h2>
+            <p style="color: #495257;">Realizar sua teleconsulta está mais rápido e fácil. Receber apoio profissional para sua saúde está mais acessível do que nunca!</p>
+            <ol>
+                <li>Escolha sua modalidade de atendimento, sendo o plantão ou o agendamento com um médico da especialidade de sua escolha;</li>
+                <li>Caso opte pelo agendamento, escolha o horário que gostaria de ser atendido;</li>
+                <li>Agora, é a vez de escolher como deseja realizar o pagamento, oferecemos PIX e cartão de crédito;</li>
+                <li>No momento do atendimento, certifique-se de que está em um local com bom sinal de wi-fi, microfone e câmera funcionando, e inicie a sua sessão.</li>
+            </ol>
+        </div>
+    </div>
+
+    <hr>
+
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+        <!-- Section: Social media -->
+      
+        <!-- Section: Links  -->
+        <section class="">
+          <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+              <!-- Grid column -->
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <!-- Content -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  <i class="fas fa-gem me-3"></i><img src="./img/logo-clinica(online).png" alt="logo-clinica" style="height: 250px;">
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 links-footer">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Links Úteis
+                </h6>
+                <p>
+                  <a href="#" class="text-reset">Principal</a>
+                </p>
+                <p>
+                  <a href="/contato" class="text-reset">Contato</a>
+                </p>
+                <p>
+                  <a href="#" class="text-reset">Termo de Compromisso</a>
+                </p>
+                <p>
+                  <a href="#" class="text-reset">Política de Privacidade</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
+                <p><i class="fas fa-home me-3"></i> Maceió, Alagoas</p>
+                <p>
+                  <i class="fas fa-envelope me-3"></i>
+                  clinMED@outlook.com
+                </p>
+                <p><i class="fas fa-phone me-3"></i> +55 3223-5478</p>
+                <p><i class="fas fa-print me-3"></i> +55 82 98714-3554</p>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+          </div>
+        </section>
+        <!-- Section: Links  -->
+      </footer>
+      <!-- Footer -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
