--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,8 +3,6 @@
     font-size: 22px;
 }
 
-
-
 .navbar-brand img {
     height: 40px;
 }
@@ -88,4 +86,32 @@
 
 .text-content-espec h1{
     font-size: 40px;
+}
+
+.especialidade-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.especialidade-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    flex: 1 1 calc(25% - 40px);
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.especialidade-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+.links-footer a{
+    text-decoration: none;
+    color: black;
 }
