--- a/views/cadastroMed.ejs
+++ b/views/cadastroMed.ejs
@@ -15,7 +15,7 @@
                 <input type="email" name="email" placeholder="Digite seu email" required>
                 <input type="text" name="cpf" placeholder="CPF" required>
                 <input type="text" name="crm" placeholder="CRM" required>
-                <select name="tipo_usuario" required>
+                <select name="tipo_usuario" id="tipo_usuario" required>
                     <option value="medico">Médico</option>
                     <option value="paciente">Paciente</option>                   
                 </select>
@@ -31,5 +31,6 @@
             </div>
         </div>
     </div>
+    <script src="/js/cadastroMed.js"></script>
 </body>
 </html>
