--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinMED | Contate-se conosco</title>
+    <link rel="stylesheet" href="/css/contato.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Contato</h1>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="/"><img src="/img/logo-clinica(online).png" alt="ClinMED Logo" style="height: 80px;"><label style="font-size: 30px;">ClinMED</label></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link active" href="/agendamento-pagina-inicial">Agendamento</a>
+            <a class="nav-item nav-link active" href="/contato">Contato</a>
+            <a class="nav-item nav-link active" href="/login">Login</a>
+            <a class="nav-item nav-link active btn-cadastrar" href="/pergunta-registro">Cadastrar</a>
+          </div>
+        </div>
+    </nav>
+    <div class="cont-container">
+        <h2><strong>CONTATO</strong><br>_______</h2>
+        <p style="font-size: 20px; color: black; margin: 20px;">Envie-nos um e-mail com quaisquer dúvidas ou perguntas ou use nossos dados de contato.</p>
+        <div class="container" >
+            <div class="row">
+              <div class="col-sm">
+                <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                  </svg><br><label>+55 (82) 3444-6136</label>
+            </div>
+              <div class="col-sm">
+                <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-send-fill" viewBox="0 0 16 16">
+                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                  </svg><label>CEP 57050000 - Avenida Fernandes Lima - até 812 - lado par, Farol, Maceió, AL</label>
+            </div>
+              <div class="col-sm">
+                <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
+                    <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
+                    <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
+                   </svg><br><label>clinMED@outlook.com</label>
+            </div>
+            </div>
+          </div>
+    </div>
+    <div class="container">
+        <form>
+        <div class="row">
+          <div class="col">
+            <div class="form-group">
+            <label for="exampleFormControlInput1">Nome Completo</label>
+            <input type="text" class="form-control input-custom" id="exampleFormControlInput1" placeholder="Nome Completo">
+            </div>
+            </div>
+          <div class="col-6">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email</label>
+                <input type="email" class="form-control input-custom" id="exampleFormControlInput2" placeholder="Email">
+                </div>
+          </div>
+          <div class="col">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Telefone</label>
+                <input type="tel" class="form-control input-custom" id="exampleFormControlInput3" placeholder="Telefone">
+                </div>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="form-group">
+            <label for="exampleFormControlTextarea1">Mensagem:</label>
+            <textarea class="form-control textarea-custom" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          </div>
+        </div>
+        <div class="text-center">
+        <button type="button" class=" btn-custom-orange btn-lg">ENVIAR</button>
+    </div>
+        </form>
+      </div>
+      <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+        <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+          style="border:0" allowfullscreen></iframe>
+      </div>
+
+      <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+        <!-- Section: Social media -->
+      
+        <!-- Section: Links  -->
+        <section class="">
+          <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+              <!-- Grid column -->
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <!-- Content -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  <i class="fas fa-gem me-3"></i><img src="./img/logo-clinica(online).png" alt="logo-clinica" style="height: 250px;">
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 links-footer">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Links Úteis
+                </h6>
+                <p>
+                  <a href="#" class="text-reset">Principal</a>
+                </p>
+                <p>
+                  <a href="/contato" class="text-reset">Contato</a>
+                </p>
+                <p>
+                  <a href="#" class="text-reset">Termo de Compromisso</a>
+                </p>
+                <p>
+                  <a href="#" class="text-reset">Política de Privacidade</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+      
+              <!-- Grid column -->
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
+                <p><i class="fas fa-home me-3"></i> Maceió, Alagoas</p>
+                <p>
+                  <i class="fas fa-envelope me-3"></i>
+                  clinMED@outlook.com
+                </p>
+                <p><i class="fas fa-phone me-3"></i> +55 3223-5478</p>
+                <p><i class="fas fa-print me-3"></i> +55 82 98714-3554</p>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+          </div>
+        </section>
+        <!-- Section: Links  -->
+      </footer>
+      <!-- Footer -->
 </body>
 </html>
