--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="/img/logo-clinica(online).png" alt="ClinMED Logo" style="height: 80px;"><label style="font-size: 30px;">ClinMED</label></a>
+        <a class="navbar-brand" href="/"><img src="/img/logo-clinica(online).png" alt="ClinMED Logo" style="height: 80px;"><label style="font-size: 30px;">ClinMED</label></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,7 +18,7 @@
             <a class="nav-item nav-link active" href="/agendamento-pagina-inicial">Agendamento</a>
             <a class="nav-item nav-link active" href="/contato">Contato</a>
             <a class="nav-item nav-link active" href="/login">Login</a>
-            <a class="nav-item nav-link active btn-cadastrar" href="/cadastro-paciente">Cadastrar</a>
+            <a class="nav-item nav-link active btn-cadastrar" href="/pergunta-registro">Cadastrar</a>
           </div>
         </div>
     </nav>
@@ -43,25 +43,25 @@
     <div class="especialidade-container">
         <div class="especialidade-card">
             <div class="especialidade-img">
-                <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Clinica-Medica.svg" style="height: 50px;" alt="Card image cap">
+                <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Clinica-Medica.svg" style="height: 50px;" alt="Card image cap"></a>
             </div>    
             <label>Clinico Geral</label>
         </div>
         <div class="especialidade-card">
             <div class="especialidade-img">
-            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Ginecologia.svg" style="height: 50px;" alt="Card image cap">
+              <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Ginecologia.svg" style="height: 50px;" alt="Card image cap"></a>
             </div>
             <label>Ginecologista</label>
         </div>
         <div class="especialidade-card">
             <div class="especialidade-img">
-            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Pediatria.svg"  style="height: 50px;" alt="Card image cap">
+              <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Pediatria.svg"  style="height: 50px;" alt="Card image cap"></a>
             </div>
             <label>Pediatria</label>        
             </div>
         <div class="especialidade-card">
             <div class="especialidade-img">
-            <img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Urologia.svg" style="height: 50px;" alt="Card image cap">
+              <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Urologia.svg" style="height: 50px;" alt="Card image cap"></a>
             </div>
             <label>Urologia</label>
         </div>
