--- a/views/agendamento.ejs
+++ b/views/agendamento.ejs
@@ -1,87 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClinMED | Agende sua consulta aqui!</title>
+    <title>ClinMED | Agendamento</title>
     <link rel="stylesheet" href="/css/agendamento.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <div class="sidebar">
-        <div class="logo">
-            <img src="logo.png" alt="ClinMED">
-            <h2>ClinMED</h2>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="/"><img src="/img/logo-clinica(online).png" alt="ClinMED Logo" style="height: 80px;"><label style="font-size: 30px;">ClinMED</label></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link active" href="/agendamento-pagina-inicial">Agendamento</a>
+            <a class="nav-item nav-link active" href="/contato">Contato</a>
+            <a class="nav-item nav-link active" href="/login">Login</a>
+            <a class="nav-item nav-link active btn-cadastrar" href="//pergunta-registro">Cadastrar</a>
+          </div>
         </div>
-        <nav>
-            <ul>
-                <li class="active"><a href="#">Início</a></li>
-                <li><a href="#">Pacientes</a></li>
-                <li><a href="#">Agenda</a></li>
-                <li><a href="#">Consultas</a></li>
-                <li><a href="#">Sair</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="main-content">
-        <header>
-            <h1>Início</h1>
-            <div class="user-info">
-                <img src="doctor.png" alt="Dr. Souza">
-                <div>
-                    <h4>Dr. Souza</h4>
-                    <p>Urologista</p>
-                </div>
-            </div>
-        </header>
-        <main>
-            <h2>Meu Consultório</h2>
-            <div class="cards">
-                <div class="card">
-                    <div class="icon">
-                        <img src="user-icon.png" alt="Pacientes cadastrados">
-                    </div>
-                    <div class="details">
-                        <h3>5</h3>
-                        <p>Pacientes cadastrados</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="icon">
-                        <img src="calendar-icon.png" alt="Agendamentos">
-                    </div>
-                    <div class="details">
-                        <h3>0</h3>
-                        <p>Agendamento hoje</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="icon">
-                        <img src="consultation-icon.png" alt="Atendimentos">
-                    </div>
-                    <div class="details">
-                        <h3>0</h3>
-                        <p>Atendimento do dia</p>
-                    </div>
-                </div>
-            </div>
-            <div class="recent-patients">
-                <h3>Pacientes recentes</h3>
-                <ul>
-                    <li>Carlos Alves Pinheiro</li>
-                    <li>Paula Maranhense da Silva</li>
-                    <li>Mauro de Souza</li>
-                    <li>Salomeu de Lima Freitas</li>
-                    <li>Catarina Fernanda de Souza</li>
-                </ul>
-            </div>
-            <div class="waiting-room">
-                <h3>Sala de Espera</h3>
-                <div class="waiting-count">
-                    <h4>2</h4>
-                    <p>Pacientes Aguardando</p>
-                </div>
-            </div>
-        </main>
-    </div>
+    </nav>
+
+  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
