Página de agendamento completa Página de cadastros consertadas

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
 
                     <button>Login</button>
                     <br> <br>
-                    <a href="">Não tem cadastro? Cadastre-se</a>
+                    <a href="/pergunta-registro">Não tem cadastro? Cadastre-se</a>
                 </form>
             </div>
         </div>
