--- a/views/perguntaRegistro.ejs
+++ b/views/perguntaRegistro.ejs
@@ -13,16 +13,18 @@
 
     <h1 class="m-5" style="text-align: center;">Qual usuário você deseja criar?</h1>
     <div class="container-fluid row justify-content-center">
-        <div class="col-sm-5"> 
+        <div class="col-sm-5">
+          <a href="/cadastro-paciente" style="text-decoration: none;">
                 <div class="card">
                   <div class="card-body">
                     <h1 class="card-title title">Paciente</h1>
-                    <a href="/cadastroPac" style="text-decoration: none;"><img src="./img/paciente-medico.png" alt="paciente"></a>
+                    <img src="./img/paciente-medico.png" alt="paciente">
                   </div>
                 </div>
+              </a>
         </div>
         <div class="col-sm-5"> 
-            <a href="/cadastroMed" style="text-decoration: none;">
+            <a href="/cadastro-medico" style="text-decoration: none;">
                 <div class="card">
                   <div class="card-body">
                     <h1 class="card-title title">Médico</h1>
