--- a/public/css/agendamento.css
+++ b/public/css/agendamento.css
@@ -1,4 +1,4 @@
-.navbar-nav a{
+.navbar-nav a {
     font-size: 22px;
 }
 .navbar-brand img {
@@ -29,4 +29,43 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+}
+
+.select {
+    width: 50%;
+    margin: auto;
+}
+
+select {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+}
+
+.especialidade-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.especialidade-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    flex: 1 1 calc(25% - 40px);
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.especialidade-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+.links-footer a{
+    text-decoration: none;
+    color: black;
 }
