--- a/views/agendamento.ejs
+++ b/views/agendamento.ejs
@@ -23,7 +23,119 @@
         </div>
     </nav>
 
-  
+    <div class="select" style="margin-top: 50px;">
+      <h2>Qual especialidade médica você procura?</h2>
+      <br>
+      <select class="form-select" aria-label="Default select example">
+          <option select style="color: #495257;">Digite a especialidade desejada...</option>
+          <option value="1">Cardiologista</option>
+          <option value="2">Clínico Geral</option>
+          <option value="3">Endocrinologista</option>
+          <option value="4">Geriatra</option>
+          <option value="5">Ginecologista</option>
+          <option value="6">Infectologista</option>
+          <option value="7">Neurologista</option>
+          <option value="8">Ortopedista</option>
+          <option value="9">Otorrinolaringologista</option>
+          <option value="10">Pediatra</option>
+          <option value="11">Psiquiatra</option>
+          <option value="12">Radiologista</option>
+          <option value="13">Urologista</option>
+        </select>
+        <br>
+        <button type="button" id="btn-login" class="btn btn-primary btn-lg btn-block" style="background-color: #0da2c5; border-radius: 10px; margin-top: 20px;">Próximo</button> 
+  </div>
+
+  <div class="especialidade-container">
+    <div class="especialidade-card">
+        <div class="especialidade-img">
+            <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Clinica-Medica.svg" style="height: 50px;" alt="Card image cap"></a>
+        </div>    
+        <label>Clinico Geral</label>
+        <p style="color: #495257;">A partir de R$ 26,00</p>
+    </div>
+    <div class="especialidade-card">
+        <div class="especialidade-img">
+          <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Ginecologia.svg" style="height: 50px;" alt="Card image cap"></a>
+        </div>
+        <label>Ginecologista</label>
+        <p style="color: #495257;">A partir de R$ 26,00</p>
+    </div>
+    <div class="especialidade-card">
+        <div class="especialidade-img">
+          <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Pediatria.svg"  style="height: 50px;" alt="Card image cap"></a>
+        </div>
+        <label>Pediatria</label>
+        <p style="color: #495257;">A partir de R$ 26,00</p>
+        </div>
+    <div class="especialidade-card">
+        <div class="especialidade-img">
+          <a href="/agendamento-pagina-inicial"><img class="card-img-top" src="https://medico24hs.com.br/wp-content/uploads/2022/05/Urologia.svg" style="height: 50px;" alt="Card image cap"></a>
+        </div>
+        <label>Urologia</label>
+        <p style="color: #495257;">A partir de R$ 26,00</p>
+    </div>
+</div>
+
+<footer class="text-center text-lg-start bg-body-tertiary text-muted">
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i><img src="./img/logo-clinica(online).png" alt="logo-clinica" style="height: 250px;">
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 links-footer">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Links Úteis
+          </h6>
+          <p>
+            <a href="#" class="text-reset">Principal</a>
+          </p>
+          <p>
+            <a href="/contato" class="text-reset">Contato</a>
+          </p>
+          <p>
+            <a href="#" class="text-reset">Termo de Compromisso</a>
+          </p>
+          <p>
+            <a href="#" class="text-reset">Política de Privacidade</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
+          <p><i class="fas fa-home me-3"></i> Maceió, Alagoas</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            clinMED@outlook.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> +55 3223-5478</p>
+          <p><i class="fas fa-print me-3"></i> +55 82 98714-3554</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+</footer>
+<!-- Footer -->
+
+    <script src="/js/agendamento.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
