--- a/views/agendamento.ejs
+++ b/views/agendamento.ejs
@@ -43,7 +43,7 @@
           <option value="13">Urologista</option>
         </select>
         <br>
-        <button type="button" id="btn-login" class="btn btn-primary btn-lg btn-block" style="background-color: #0da2c5; border-radius: 10px; margin-top: 20px;">Próximo</button> 
+        <button type="button" id="btn-login" class="btn btn-primary btn-lg btn-block" style="background-color: #0da2c5; border-radius: 10px; margin-top: 20px;" onclick="location.href='login'">Próximo</button> 
   </div>
 
   <div class="especialidade-container">
