--- a/views/paginaInicialMed.ejs
+++ b/views/paginaInicialMed.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClinMED | Agende sua consulta aqui!</title>
-    <link rel="stylesheet" href="/css/agendamento.css">
+    <link rel="stylesheet" href="/css/paginaInicialMed.css">
 </head>
 <body>
     <div class="sidebar">
