--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,10 @@
             <p>Selecione a especialidade, o profissional e a data/horário mais conveniente para realizar sua teleconsulta:</p>
         </div>
     </div>
+
+      <!-- Links de navegação das páginas iniciais de médico e paciente -->
+      <a href="/pagina-inicial-medico">Página Inicial (Médico)</a>
+      <a href="/pagina-inicial-paciente">Página Inicial (Paciente)</a>
     
     <div class="especialidade-container">
         <div class="especialidade-card">
