--- a/views/paginaInicialPac.ejs
+++ b/views/paginaInicialPac.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/styles.css">
-        <title>Sidebar sub menus</title>
+        <title>ClinMED | Página Inicial</title>
         <link rel="stylesheet" href="/css/paginaInicialPac.css">
     </head>
     <body id="body-pd">
